IJPL-158051 IJent WSL FS: Prevent "VM options" dialog windows when FS is enabled by default
GitOrigin-RevId: dd45e41629be4c5f1170be924c3cf0f8f2bc476c